@@ -45,16 +45,13 @@ namespace MonoDevelop.Components
 			this.SkipTaskbarHint = true;
 			this.Decorated = false;
 			this.BorderWidth = 2;
-			this.TypeHint = TooltipTypeHint;
+			this.TypeHint = WindowTypeHint.Tooltip;
 			this.AllowShrink = false;
 			this.AllowGrow = false;
 			this.Title = "tooltip"; // fixes the annoying '** Message: ATK_ROLE_TOOLTIP object found, but doesn't look like a tooltip.** Message: ATK_ROLE_TOOLTIP object found, but doesn't look like a tooltip.'
 			
 			//fake widget name for stupid theme engines
-			if (Gtk.Global.CheckVersion (2, 12, 0) == null)
-				this.Name = "gtk-tooltip";
-			else
-				this.Name = "gtk-tooltips";
+			this.Name = "gtk-tooltip";
 		}
 		
 		public bool NudgeVertical {
@@ -140,23 +137,5 @@ namespace MonoDevelop.Components
 //			else
 //				WidthRequest = width;
 //		}
-		
-		//this is GTK+ >= 2.10 only, so reflect it
-		static Gdk.WindowTypeHint TooltipTypeHint {
-			get {
-				if (tooltipTypeHint > -1)
-					return (Gdk.WindowTypeHint) tooltipTypeHint;
-				
-				tooltipTypeHint = (int) Gdk.WindowTypeHint.Dialog;
-				
-				System.Reflection.FieldInfo fi = typeof (Gdk.WindowTypeHint).GetField ("Tooltip");
-				if (fi != null)
-					tooltipTypeHint = (int) fi.GetValue (typeof (Gdk.WindowTypeHint));
-				
-				return (Gdk.WindowTypeHint) tooltipTypeHint;
-			}
-		}
-		
-		static int tooltipTypeHint = -1;
 	}
 }
